--- a/storage.ipynb
+++ b/storage.ipynb
@@ -581,6 +581,7 @@
    "outputs": [],
    "source": [
     "# https://www.acmicpc.net/problem/9772\n",
+    "\n",
     "while True:\n",
     "    x, y = map(float, input().split())\n",
     "    if x == 0 or y == 0:\n",
@@ -597,6 +598,18 @@
     "        print(\"Q2\")\n",
     "    elif x < 0 and y < 0:\n",
     "        print(\"Q3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/15964\n",
+    "\n",
+    "A, B = map(int, input().split())\n",
+    "print((A + B) * (A - B))"
    ]
   }
  ],
