--- a/storage.ipynb
+++ b/storage.ipynb
@@ -79,23 +79,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://www.acmicpc.net/problem/1809\n",
-    "\n",
-    "# golfscript\n",
-    "# \"(___)\n",
-    "# (o o)____/\n",
-    "#  @@      \\\\\n",
-    "#   \\\\ ____,/\n",
-    "#   //   //\n",
-    "#  ^^   ^^\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# https://www.acmicpc.net/problem/2744\n",
     "\n",
     "line = list(input())\n",
@@ -105,33 +88,6 @@
     "    else:\n",
     "        line[i] = line[i].upper()\n",
     "print(*line, sep=\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://www.acmicpc.net/problem/9498\n",
-    "\n",
-    "hashmap = {\n",
-    "    \"A+\": 4.3,\n",
-    "    \"A0\": 4.0,\n",
-    "    \"A-\": 3.7,\n",
-    "    \"B+\": 3.3,\n",
-    "    \"B0\": 3.0,\n",
-    "    \"B-\": 2.7,\n",
-    "    \"C+\": 2.3,\n",
-    "    \"C0\": 2.0,\n",
-    "    \"C-\": 1.7,\n",
-    "    \"D+\": 1.3,\n",
-    "    \"D0\": 1.0,\n",
-    "    \"D-\": 0.7,\n",
-    "    \"F\": 0.0,\n",
-    "}\n",
-    "\n",
-    "print(hashmap[input()])"
    ]
   },
   {
@@ -219,23 +175,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Lj, area = map(int, input().split())\n",
-    "p1, p2, p3, p4, p5 = map(int, input().split())\n",
-    "print(\n",
-    "    p1 - (Lj * area),\n",
-    "    p2 - (Lj * area),\n",
-    "    p3 - (Lj * area),\n",
-    "    p4 - (Lj * area),\n",
-    "    p5 - (Lj * area),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# https://www.acmicpc.net/problem/4299\n",
     "\n",
     "sum, dif = map(int, input().split())\n",
@@ -274,36 +213,6 @@
     "    day_l = lang // max_l\n",
     "\n",
     "print(vac - max(day_m, day_l))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "burg1 = int(input())\n",
-    "burg2 = int(input())\n",
-    "burg3 = int(input())\n",
-    "drink1 = int(input())\n",
-    "drink2 = int(input())\n",
-    "\n",
-    "print(min(burg1, burg2, burg3) + min(drink1, drink2) - 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tm1 = int(input())\n",
-    "tm2 = int(input())\n",
-    "tm3 = int(input())\n",
-    "tm4 = int(input())\n",
-    "\n",
-    "print((tm1 + tm2 + tm3 + tm4) // 60)\n",
-    "print((tm1 + tm2 + tm3 + tm4) % 60)"
    ]
   },
   {
@@ -610,6 +519,37 @@
     "\n",
     "A, B = map(int, input().split())\n",
     "print((A + B) * (A - B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/1076\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "color = {\n",
+    "    \"black\" : 0,\n",
+    "    \"brown\" : 1,\n",
+    "    \"red\" : 2,\n",
+    "    \"orange\" : 3,\n",
+    "    \"yellow\" : 4,\n",
+    "    \"green\" : 5,\n",
+    "    \"blue\" : 6,\n",
+    "    \"violet\" : 7,\n",
+    "    \"grey\" : 8,\n",
+    "    \"white\" : 9,\n",
+    "}\n",
+    "\n",
+    "a = sys.stdin.readline().strip()\n",
+    "b = sys.stdin.readline().strip()\n",
+    "c = sys.stdin.readline().strip()\n",
+    "\n",
+    "print(int(str(color[a]) + str(color[b])) * 10 ** color[c])\n"
    ]
   }
  ],
