--- a/storage.ipynb
+++ b/storage.ipynb
@@ -551,6 +551,19 @@
     "\n",
     "print(int(str(color[a]) + str(color[b])) * 10 ** color[c])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/2745\n",
+    "\n",
+    "input = __import__('sys').stdin.readline\n",
+    "a, b = input().strip().split()\n",
+    "print(int(a, int(b)))"
+   ]
   }
  ],
  "metadata": {
