--- a/storage.ipynb
+++ b/storage.ipynb
@@ -564,6 +564,28 @@
     "a, b = input().strip().split()\n",
     "print(int(a, int(b)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/2903\n",
+    "\n",
+    "input = __import__(\"sys\").stdin.readline\n",
+    "num = int(input())\n",
+    "num_list = [2, 3, 5]\n",
+    "\n",
+    "for i in range(num - 2):\n",
+    "    num_list.append(2 * num_list[-1] - 1)\n",
+    "\n",
+    "print(num_list[num] ** 2)\n",
+    "\n",
+    "# ---\n",
+    "\n",
+    "print((2 ** int(input()) + 1) ** 2)"
+   ]
   }
  ],
  "metadata": {
