--- a/code_stor.ipynb
+++ b/code_stor.ipynb
@@ -586,6 +586,62 @@
     "\n",
     "print((2 ** int(input()) + 1) ** 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/9063\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "x_axis = set()\n",
+    "y_axis = set()\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    x, y = map(int, input().split())\n",
+    "    x_axis.add(x)\n",
+    "    y_axis.add(y)\n",
+    "\n",
+    "width = max(x_axis) - min(x_axis)\n",
+    "height = max(y_axis) - min(y_axis)\n",
+    "\n",
+    "print(width * height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/5073\n",
+    "\n",
+    "while True:\n",
+    "    num_list = sorted(list(map(int, input().split())))\n",
+    "\n",
+    "    if num_list[0] == num_list[1] == num_list[2] == 0:\n",
+    "        break\n",
+    "\n",
+    "    if num_list[2] >= num_list[1] + num_list[0]:\n",
+    "        print(\"Invalid\")\n",
+    "        \n",
+    "    elif num_list[0] == num_list[1] == num_list[2]:\n",
+    "        print(\"Equilateral\")\n",
+    "\n",
+    "    elif (\n",
+    "        num_list[0] == num_list[1]\n",
+    "        or num_list[1] == num_list[2]\n",
+    "        or num_list[2] == num_list[0]\n",
+    "    ):\n",
+    "        print(\"Isosceles\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Scalene\")"
+   ]
   }
  ],
  "metadata": {
