--- a/code_stor.ipynb
+++ b/code_stor.ipynb
@@ -642,6 +642,22 @@
     "    else:\n",
     "        print(\"Scalene\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/14215\n",
+    "\n",
+    "num_list = sorted(list(map(int, input().split())))\n",
+    "\n",
+    "if num_list[0] + num_list[1] <= num_list[2]:\n",
+    "    print(2 * (num_list[0] + num_list[1]) - 1)\n",
+    "else:\n",
+    "    print(sum(num_list))"
+   ]
   }
  ],
  "metadata": {
