--- a/code_stor.ipynb
+++ b/code_stor.ipynb
@@ -658,6 +658,19 @@
     "else:\n",
     "    print(sum(num_list))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.acmicpc.net/problem/24267\n",
+    "\n",
+    "n = int(input())\n",
+    "print(((n - 2) * (n - 1) * (2 * n - 3) + 3 * (n - 1) * (n - 2)) // 12)\n",
+    "print(3)"
+   ]
   }
  ],
  "metadata": {
